[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regipy"
version = "6.2.0"
description = "Python Registry Parser"
readme = "docs/README.rst"
license = {text = "MIT"}
authors = [
    {name = "Martin G. Korman", email = "martin@centauri.co.il"}
]
keywords = ["Python", "Python3", "registry", "windows registry", "registry parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "construct>=2.10",
    "inflection>=0.5.1",
    "pytz",
]

[project.optional-dependencies]
cli = [
    "click>=7.0.0",
    "tabulate",
]
full = [
    "click>=7.0.0",
    "tabulate",
    "libfwsi-python>=20240315",
    "libfwps-python>=20240310",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "tabulate",  # Required for plugin validation
    "tomli; python_version < '3.11'",  # For test_packaging.py on Python 3.9/3.10
]

[project.scripts]
regipy-parse-header = "regipy.cli:parse_header"
regipy-dump = "regipy.cli:registry_dump"
regipy-plugins-run = "regipy.cli:run_plugins"
regipy-plugins-list = "regipy.cli:list_plugins"
regipy-diff = "regipy.cli:reg_diff"
regipy-process-transaction-logs = "regipy.cli:parse_transaction_log"

[project.urls]
Homepage = "https://github.com/mkorman90/regipy/"
Repository = "https://github.com/mkorman90/regipy/"
Issues = "https://github.com/mkorman90/regipy/issues"

[tool.setuptools]
packages = ["regipy", "regipy.plugins", "regipy.plugins.ntuser", "regipy.plugins.system", "regipy.plugins.system.external", "regipy.plugins.software", "regipy.plugins.sam", "regipy.plugins.security", "regipy.plugins.amcache", "regipy.plugins.bcd", "regipy.plugins.usrclass"]
include-package-data = true

[tool.setuptools.package-data]
"regipy.plugins" = ["validated_plugins.json"]

[tool.ruff]
target-version = "py39"
line-length = 128

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from err (too noisy for existing code)
    "SIM108", # use ternary operator instead of if-else
    "SIM115", # use context manager for opening files
]

[tool.ruff.lint.per-file-ignores]
"regipy_tests/*" = ["B007"]  # Unused loop variables in tests are fine
"regipy/cli.py" = ["B007"]  # subkey_count is used after the loop
"regipy/cli_utils.py" = ["B007"]  # Loop counter used for progress
"regipy/plugins/utils.py" = ["B007"]  # Loop counter pattern

[tool.ruff.lint.isort]
known-first-party = ["regipy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false  # Start lenient, can increase strictness later
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["regipy_tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v"

[tool.coverage.run]
source = ["regipy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
