[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "regipy-rs"
version = "0.0.1"
description = "Rust-backed Python bindings for regipy (POC)"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "regipy_rs"
manifest-path = "Cargo.toml"
